--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -6,7 +6,7 @@
 /*=== 2.3 BANNER ===*/
 
 .banner-area {
-  background-image: url('../images/banner.jpg');
+  background-image: url('../images/banner/banner.jpg');
   @include background-image;
   height: 100vh;
   width: 100%;
