--- a/scss/_products.scss
+++ b/scss/_products.scss
@@ -31,7 +31,7 @@
 }
 .counter-area{
     padding: $padding * 10 0;
-    background: url("../images/project-counter.jpg");
+    background: url("../images/banner/project-counter.jpg");
     @include background-image;
   .counter-wrap{
     padding: $padding;
