--- a/scss/_testimonial.scss
+++ b/scss/_testimonial.scss
@@ -1,7 +1,7 @@
 /*=== 9. TESTIMONIAL ===*/
 .testimonial-area {
   @include background-image;
-  background: url("../images/testimonial.png");
+  background: url("../images/banner/testimonial.png");
   position: relative;
   img {
     display: inline-block;
