--- a/scss/_header-v1.scss
+++ b/scss/_header-v1.scss
@@ -14,6 +14,14 @@
     background-color: $navbar-bg;
     
   }
+  .navbar-brand {
+      float: left;
+      height: auto;
+      padding: $padding - 5 15px;
+      img{
+        height: 50px;
+      }
+  }
   .navbar-nav{
     li{
       a{
@@ -22,6 +30,8 @@
 				text-transform: uppercase;
         font-weight: 600;
         position: relative;
+        padding-top: $padding * 2;
+        padding-bottom: $padding * 2;
         @include transition(all 0.5s ease-in-out);
         &:before{
           @extend %after-before;
